--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "twitter",
   "version": "0.1.0",
+  "homepage": "https://Ai-Chen-Hsieh.github.io/Twitter-2023",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -9,6 +10,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.3",
     "clsx": "^1.2.1",
+    "gh-pages": "^4.0.0",
     "json-server": "^0.17.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^18.2.0",
@@ -24,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
